Fix wrong sized card information in desktop size

--- a/style.css
+++ b/style.css
@@ -93,8 +93,6 @@ nav .btn:hover {
   font-weight: bold;
   color: white;
   background-color: red;
-  height: 3rem;
-  width: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -102,7 +100,6 @@ nav .btn:hover {
 }
 
 .discounted {
-  font-size: 0.8rem;
   text-decoration: line-through;
   margin-bottom: 0;
 }
@@ -191,6 +188,10 @@ aside .btn {
     width: 5rem;
   }
 
+  .list-group-item {
+    font-size: 1.1rem;
+  }
+
   #back-top-btn .material-symbols-rounded {
     font-size: 2.5rem;
   }
@@ -199,5 +200,26 @@ aside .btn {
 @media screen and (min-width: 992px) {
   .product-modal .product {
     left: 40%;
+  }
+
+  .card-body h5 {
+    font-size: 1.2rem;
+  }
+
+  .card-body p {
+    font-size: 1rem;
+  }
+
+  .card-body p {
+    font-size: 1rem;
+  }
+
+  .card-body .discounted {
+    font-size: 0.8rem;
+  }
+
+  .card .discount-rate {
+    height: 3rem;
+    width: 3rem;
   }
 }
